--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "jest": "^24.8.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^2.3.10",
- 
+    "morgan":"1.9.1",
     
     "nodemon": "^1.19.1",
     "request": "^2.88.0",
